<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/want_donate_blood"
            android:textColor="@color/orange"
            android:textIsSelectable="true"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/requirements"
            android:textColor="@color/colorLink"
            android:textIsSelectable="true"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/requirements_blood_bank"
            android:textIsSelectable="true"
            android:textSize="16sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/blood_banks"
            android:textColor="@color/colorLink"
            android:textIsSelectable="true"
            android:textSize="20sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/label_hospital_angeles_pedregal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/hospital_angeles_pedregal"
            android:textColor="@drawable/label_default_event_black"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/label_hospital_angeles_lindavista"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/hospital_angeles_lindavista"
            android:textColor="@drawable/label_default_event_black"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/label_hospital_abc_constituyentes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/hospital_abc_constituyentes"
            android:textColor="@drawable/label_default_event_black"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/label_hospital_abc_observatorio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/hospital_abc_observatorio"
            android:textColor="@drawable/label_default_event_black"
            android:textIsSelectable="true"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/label_hospital_siglo_xxi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/hospital_siglo_xxi"
            android:textColor="@drawable/label_default_event_black"
            android:textIsSelectable="true"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/label_hospital_abc_de_santa_fe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/hospital_abc_de_santa_fe"
            android:textColor="@drawable/label_default_event_black"
            android:textIsSelectable="true"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/label_hospitals_del_imss"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/hospitals_del_imss"
            android:textColor="@drawable/label_default_event_black"
            android:textIsSelectable="true"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/label_hospitals_del_issste"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/hospitals_del_issste"
            android:textColor="@drawable/label_default_event_black"
            android:textIsSelectable="true"
            android:textSize="18sp" />

    </LinearLayout>

</ScrollView>