<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:padding="16dp"
      >


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hospital_7"
        android:textColor="@color/colorAccent"
        android:textIsSelectable="true"
        android:textSize="22sp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/hospital_1"
        android:textColor="@android:color/primary_text_light"
        android:textIsSelectable="true"
        android:textSize="22sp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/hospital_2"
        android:textColor="@android:color/primary_text_light"
        android:textIsSelectable="true"
        android:textSize="22sp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/hospital_3"
        android:textColor="@android:color/primary_text_light"
        android:textIsSelectable="true"
        android:textSize="22sp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/hospital_4"
        android:textColor="@android:color/primary_text_light"
        android:textIsSelectable="true"
        android:textSize="22sp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/hospital_5"
        android:textColor="@android:color/primary_text_light"
        android:textIsSelectable="true"
        android:textSize="22sp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/hospital_6"
        android:textColor="@android:color/primary_text_light"
        android:textIsSelectable="true"
        android:textSize="22sp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/hospital_8"
        android:textColor="@android:color/primary_text_light"
        android:textIsSelectable="true"
        android:textSize="22sp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Hospital 20 de Noviembre"
        android:textColor="@android:color/primary_text_light"
        android:textIsSelectable="true"
        android:textSize="22sp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Magdalena de Las Salinas"
        android:textColor="@android:color/primary_text_light"
        android:textIsSelectable="true"
        android:textSize="22sp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Hospital Angeles del Pedregal"
        android:textColor="@android:color/primary_text_light"
        android:textIsSelectable="true"
        android:textSize="22sp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Hospital Angeles Lindavista"
        android:textColor="@android:color/primary_text_light"
        android:textIsSelectable="true"
        android:textSize="22sp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Centro Médico Nacional Siglo XXI"
        android:textColor="@android:color/primary_text_light"
        android:textIsSelectable="true"
        android:textSize="22sp"
        android:textStyle="bold"
        />


  </LinearLayout>

</ScrollView>