<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    >

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:orientation="vertical"
        >

      <TextView
          android:id="@+id/textView10"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/help_required"
          android:textColor="@color/colorPrimaryDark"
          android:textStyle="bold"
          />


      <TextView
          android:id="@+id/help_required"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          />

      <TextView
          android:id="@+id/title_help_no_required"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/help_no_required"
          android:textColor="@color/colorPrimaryDark"
          android:textStyle="bold"
          />

      <TextView
          android:id="@+id/help_no_required"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          />

      <TextView
          android:id="@+id/textView11"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/direction"
          android:textColor="@color/colorPrimaryDark"
          android:textStyle="bold"
          />

      <TextView
          android:id="@+id/direction"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          />


      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/zone"
          android:textColor="@color/colorPrimaryDark"
          android:textStyle="bold"
          />

      <TextView
          android:id="@+id/zone"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          />


      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/detail"
          android:textColor="@color/colorPrimaryDark"
          android:textStyle="bold"
          />

      <TextView
          android:id="@+id/detail"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          />


      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/date_update"
          android:textColor="@color/colorPrimaryDark"
          android:textStyle="bold"
          />

      <TextView
          android:id="@+id/date_update"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          />

      <TextView
          android:id="@+id/nivel"
          android:layout_width="90dp"
          android:layout_height="wrap_content"
          android:layout_gravity="end"
          android:ellipsize="end"
          android:gravity="center"
          android:maxLines="1"
          android:padding="8dp"
          android:textColor="@android:color/white"
          android:textSize="18sp"
          />
    </LinearLayout>
  </LinearLayout>
</android.support.v7.widget.CardView>