<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:padding="16dp"
      >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="¿Qué hacer al llegar a mi edificio o casa?"
        android:textColor="@color/colorAccent"
        android:textIsSelectable="true"
        android:textSize="22sp"
        android:textStyle="bold"
        />


    <TextView
        android:id="@+id/textView18"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/advice_house"
        android:textIsSelectable="true"
        android:textSize="20sp"
        />


    <TextView
        android:id="@+id/textView19"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="¿Cómo ayudar desde internet?"
        android:textColor="@color/orange"
        android:textIsSelectable="true"
        android:textSize="22sp"
        android:textStyle="bold"
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/advice_internet"
        android:textIsSelectable="true"
        android:textSize="20sp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="¿A donde ir para ayudar físicamente?"
        android:textColor="@color/colorPrimaryDark"
        android:textIsSelectable="true"
        android:textSize="22sp"
        android:textStyle="bold"
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/advice_help"
        android:textIsSelectable="true"
        android:textSize="20sp"
        />


  </LinearLayout>

</ScrollView>